--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
    <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Rule Studio2</title>
+        <title>Rule Studio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -114,24 +114,6 @@
                     <div class="row">
                         <!-- Object detail column -->
                         <div id="detailColumn" class="col-sm-12 objcol">
-
-                            
-                            <div id="nav1" class="btn-toolbar" role="toolbar" >
-                                <div class="btn-group" role="group" aria-label="...">
-                                    <button id="menu-toggle2" type="button" class="btn btn-link">
-                                        <span class="glyphicon glyphicon-align-justify"></span>
-                                    </button>
-                                </div>
-                                <div class="btn-group pull-right" role="group" aria-label="...">
-                                    <button type="button" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-zoom-in"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-minus"></span>
-                                    </button>
-                                </div>
-                            </div>
-
                             {{> detailForm }}
                         </div>
                     </div>
