--- a/client/index.html
+++ b/client/index.html
@@ -114,6 +114,16 @@
                     <div class="row">
                         <!-- Object detail column -->
                         <div id="detailColumn" class="col-sm-12 objcol">
+                            <div id="nav1" class="btn-toolbar" role="toolbar" >
+                                <div class="btn-group" role="group" aria-label="...">
+                                    <button id="menu-toggle2" type="button" class="btn btn-link">
+                                        <span class="glyphicon glyphicon-align-justify"></span>
+                                    </button>
+                                </div>
+                                <div class="btn-group pull-right" role="group" aria-label="...">
+                                    {{> detailTools}}
+                                </div>
+                            </div>
                             {{> detailForm }}
                         </div>
                     </div>
