--- a/client/index.html
+++ b/client/index.html
@@ -82,13 +82,13 @@
                                 <span class="glyphicon glyphicon-plus"></span>
                                 <span class="caret"></span>
                             </button>
-                            <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                                <li><a href="#" id="addDataObject">Data Object</a></li>
-                                <li><a href="#" id="addDataObjectSet">Data Object Set</a></li>
-                                <li><a href="#" id="addFormat">Format</a></li>
-                                <li><a href="#" id="addFormatSet">Format Set</a></li>
-                                <li><a href="#" id="addProcess">Process</a></li>
-                                <li><a href="#" id="addRule">Rule</a></li>
+                            <ul id="addObjectMenu" class="dropdown-menu dropdown-menu-right" role="menu">
+                                <li><a href="#" id="dataObject">Data Object</a></li>
+                                <li><a href="#" id="dataObjectSet">Data Object Set</a></li>
+                                <li><a href="#" id="format">Format</a></li>
+                                <li><a href="#" id="formatSet">Format Set</a></li>
+                                <li><a href="#" id="process">Process</a></li>
+                                <li><a href="#" id="rule">Rule</a></li>
                             </ul>
                         </div>
                     </div>
